[tool.poetry]
name = "rathercurious_mastodon"
version = "0.1.0"
description = ""
authors = ["slashtechno <77907286+slashtechno@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rathercurious_mastodon"}]

[tool.poetry.dependencies]
python = "^3.11"
mastodon-py = "^1.8.1"
python-dotenv = "^1.0.0"
trio = "^0.22.2"
loguru = "^0.7.0"
pytz = "^2023.3"
airportsdata = "^20230717"
beautifulsoup4 = "^4.12.2"
httpx = "^0.24.1"
dateparser = "^1.2.0"
peewee = "^3.17.5"
psycopg2-binary = "^2.9.9"

[tool.poetry.scripts]
rathercurious-mastodon = "rathercurious_mastodon.__main__:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
extend-select= ["FIX002"]